--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -8,7 +8,7 @@ server {
 	server_name localhost;
 
 	location / {
-		proxy_pass http://geoserver:8080;
+		proxy_pass http://nothing;
 	}
 
     proxy_connect_timeout       3605;
